# elograf

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG  INSTALL.md  README  README.md  README_fr  README_fr.md  TODO.md  elograf  elograf.desktop  elograf.pro  elograf.py  elograf.qrc  pyproject.toml  setup.cfg  setup.py
.claude/: settings.local.json
eloGraf/: advanced.py  advanced.ui  advnaced.ui  audio_pipeline.py  cli.py  confirm.py  confirm.ui  controller.py  custom.py  custom.ui  dialogs.py  dictation.py  elograf.py  elograf_rc.py  engine_settings_registry.py  inference_backend.py  input_simulator.py  ipc_dbus.py  ipc_localsocket.py  ipc_manager.py  languages.py  model_repository.py  nd.py  nerd_controller.py  pidfile.py  settings.py  state_machine.py  text_formatter.py  threaded_runner.py  tray_icon.py  ui_generator.py  vad_processor.py
eloGraf/engines/: __init__.py
eloGraf/engines/assemblyai/: settings.py
eloGraf/engines/gemini/: settings.py
eloGraf/engines/google/: settings.py
eloGraf/engines/nerd/: settings.py
eloGraf/engines/openai/: settings.py
eloGraf/engines/vosk_local/: controller.py  engine.py  inference_backend.py  runner.py  settings.py
eloGraf/engines/whisper/: settings.py
eloGraf/translations/: elograf_ca.ts  elograf_cs.ts  elograf_de.ts  elograf_en.ts  elograf_es.ts  elograf_fi.ts  elograf_fr.ts  elograf_it.ts  elograf_nb.ts  elograf_nl.ts  elograf_pt.ts  elograf_pt_BR.ts  elograf_ro.ts  elograf_ru.ts  elograf_sv.ts  elograf_uk.ts
eloGraf/translations/.tx/: config
icons/elograf/: index.theme
tests/: test_advanced_dialog_dynamic.py  test_audio_buffer.py  test_cli.py  test_dialogs.py  test_dictation.py  test_inference_backend.py  test_integration.py  test_model_repository.py  test_nerd_controller.py  test_settings.py  test_state_machine.py  test_text_formatter.py  test_threaded_runner.py  test_tray_icon.py  test_vad_processor.py  test_vosk_backend.py  test_vosk_settings_integration.py
tests/engines/: test_vosk_local_integration.py
