[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "EloGraf"
version = "0.8.0"
description = "Utility for launching and configuring nerd-dictation for voice recognition"
authors = [
    {name = "papoteur", email = "papoteur@mageia.org"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "ujson",
    "PyQt6",
    "vosk",
    "pyaudio",
    "requests",
    "google-cloud-speech",
    "websocket-client",
]

[project.optional-dependencies]
local_stt = [
    "vosk>=0.3.45",
    "silero-vad>=4.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "webrtcvad>=2.0.10",
    "setuptools",
    "psutil",
]

[project.urls]
Homepage = "https://github.com/papoteur-mga/elograf/"

[project.scripts]
elograf = "eloGraf.elograf:main"

[tool.setuptools]
packages = ["eloGraf"]

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-qt>=4.2.0",
    "numpy",
]
