[metadata]
name = EloGraf
version = 0.4.0
author = papoteur
author_email = papoteur@mageia.org
description = Utility for launching and configuring nerd-dictation for voice recognition
long_description = file: README
long_description_content_type = text
url = https://github.com/papoteur-mga/elograf/
classifiers =
    Programming Language :: Python :: 3
    License :: GPLv3
    Operating System :: Linux


[options]
package_dir =
packages = find:
python_requires = >=3.7
scripts=
    elograf
    
